Latest build deployed.

--- a/ch-integration.html
+++ b/ch-integration.html
@@ -8,7 +8,7 @@
 <html lang="en-US" dir="ltr">
 <head xmlns:og="http://ogp.me/ns#" xmlns:book="https://ogp.me/ns/book#">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Backmatter</title>
+<title>Integration</title>
 <meta name="Keywords" content="Authored in PreTeXt">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:type" content="book">
@@ -106,7 +106,7 @@ window.MathJax = {
 <ol id="searchresults" class="searchresults"></ol>
 </div>
 </div>
-<span class="nav-other-controls"></span><span class="treebuttons"><a class="previous-button button" href="ch-laplace-transform.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="up-button button" href="series-and-transforms.html" title="Up"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Up</span></a><a class="next-button button" href="backmatter-2.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a></span></nav><div id="latex-macros" class="hidden-content process-math" style="display:none"><span class="process-math">\(\usepackage{times}
+<span class="nav-other-controls"></span><span class="treebuttons"><a class="previous-button button" href="ch-series-of-functions.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="up-button button" href="series-and-transforms.html" title="Up"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Up</span></a><a class="next-button button" href="ch-vector-spaces.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a></span></nav><div id="latex-macros" class="hidden-content process-math" style="display:none"><span class="process-math">\(\usepackage{times}
 \usepackage[T1]{fontenc}
 \usepackage{parskip}
 \newcommand{\lt}{&lt;}
@@ -136,16 +136,18 @@ window.MathJax = {
 <li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-sequences-of-functions.html" class="internal"><span class="codenumber">6</span> <span class="title">Sequences of functions</span></a></div></li>
 <li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-series.html" class="internal"><span class="codenumber">7</span> <span class="title">Series</span></a></div></li>
 <li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-series-of-functions.html" class="internal"><span class="codenumber">8</span> <span class="title">Series of functions</span></a></div></li>
-<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-integration.html" class="internal"><span class="codenumber">9</span> <span class="title">Integration</span></a></div></li>
+<li class="toc-item toc-chapter active"><div class="toc-title-box"><a href="ch-integration.html" class="internal"><span class="codenumber">9</span> <span class="title">Integration</span></a></div></li>
 <li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-vector-spaces.html" class="internal"><span class="codenumber">10</span> <span class="title">Vector spaces</span></a></div></li>
 <li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-fourier-series.html" class="internal"><span class="codenumber">11</span> <span class="title">Fourier series</span></a></div></li>
 <li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-fourier-transform.html" class="internal"><span class="codenumber">12</span> <span class="title">Fourier transform</span></a></div></li>
 <li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-laplace-transform.html" class="internal"><span class="codenumber">13</span> <span class="title">Laplace transform</span></a></div></li>
-<li class="toc-item toc-backmatter active"><div class="toc-title-box"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
+<li class="toc-item toc-backmatter"><div class="toc-title-box"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
 </ul></nav></div>
-<main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="backmatter" id="backmatter"><nav class="summary-links"><ul><li><a href="backmatter-2.html" class="internal"><span class="title">Colophon</span></a></li></ul></nav></section></div>
+<main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="chapter" id="ch-integration"><h2 class="heading">
+<span class="type">Chapter</span><span class="space"> </span><span class="codenumber">9</span><span class="space"> </span><span class="title">Integration</span>
+</h2></section></div>
 <div class="ptx-content-footer">
-<a class="previous-button button" href="ch-laplace-transform.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="backmatter-2.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
+<a class="previous-button button" href="ch-series-of-functions.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="ch-vector-spaces.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
 </div></main>
 </div>
 <div id="ptx-page-footer" class="ptx-page-footer">
