--- a/frontmatter.html
+++ b/frontmatter.html
@@ -119,9 +119,28 @@ window.MathJax = {
 <div id="ptx-sidebar" class="ptx-sidebar"><nav id="ptx-toc" class="ptx-toc depth2"><ul class="structural contains-active toc-item-list">
 <li class="toc-item toc-frontmatter active"><div class="toc-title-box"><a href="frontmatter.html" class="internal"><span class="title">Front Matter</span></a></div></li>
 <li class="toc-item toc-chapter">
-<div class="toc-title-box"><a href="ch-chapter-title.html" class="internal"><span class="codenumber">1</span> <span class="title">Chapter Title</span></a></div>
-<ul class="structural toc-item-list"><li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-section-name.html" class="internal"><span class="codenumber">1.1</span> <span class="title">Section Title</span></a></div></li></ul>
+<div class="toc-title-box"><a href="ch-introduction.html" class="internal"><span class="codenumber">1</span> <span class="title">Introduction</span></a></div>
+<ul class="structural toc-item-list">
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-what-is-mathematics.html" class="internal"><span class="codenumber">1.1</span> <span class="title">What is mathematics?</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-why-study-mathematics.html" class="internal"><span class="codenumber">1.2</span> <span class="title">Why study mathematics?</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-the-power-of-abstraction.html" class="internal"><span class="codenumber">1.3</span> <span class="title">The power of abstraction</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-formalism-and-proof.html" class="internal"><span class="codenumber">1.4</span> <span class="title">Formalism and proof</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-what-is-a-mathematician.html" class="internal"><span class="codenumber">1.5</span> <span class="title">What is a mathematician?</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-overview-of-series-and-transforms.html" class="internal"><span class="codenumber">1.6</span> <span class="title">Overview of Series and Transforms</span></a></div></li>
+</ul>
 </li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-logic-and-mathematical-objects.html" class="internal"><span class="codenumber">2</span> <span class="title">Logic and mathematical objects</span></a></div></li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-methods-of-proof.html" class="internal"><span class="codenumber">3</span> <span class="title">Methods of proof</span></a></div></li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-cardinality.html" class="internal"><span class="codenumber">4</span> <span class="title">Cardinality</span></a></div></li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-sequences.html" class="internal"><span class="codenumber">5</span> <span class="title">Sequences</span></a></div></li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-sequences-of-functions.html" class="internal"><span class="codenumber">6</span> <span class="title">Sequences of functions</span></a></div></li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-series.html" class="internal"><span class="codenumber">7</span> <span class="title">Series</span></a></div></li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-series-of-functions.html" class="internal"><span class="codenumber">8</span> <span class="title">Series of functions</span></a></div></li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-integration.html" class="internal"><span class="codenumber">9</span> <span class="title">Integration</span></a></div></li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-vector-spaces.html" class="internal"><span class="codenumber">10</span> <span class="title">Vector spaces</span></a></div></li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-fourier-series.html" class="internal"><span class="codenumber">11</span> <span class="title">Fourier series</span></a></div></li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-fourier-transform.html" class="internal"><span class="codenumber">12</span> <span class="title">Fourier transform</span></a></div></li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-laplace-transform.html" class="internal"><span class="codenumber">13</span> <span class="title">Laplace transform</span></a></div></li>
 <li class="toc-item toc-backmatter"><div class="toc-title-box"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
 </ul></nav></div>
 <main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="frontmatter" id="frontmatter"><h2 class="heading"><span class="title">Series and Transforms</span></h2>
