--- a/sec-what-is-a-mathematician.html
+++ b/sec-what-is-a-mathematician.html
@@ -8,7 +8,7 @@
 <html lang="en-US" dir="ltr">
 <head xmlns:og="http://ogp.me/ns#" xmlns:book="https://ogp.me/ns/book#">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Backmatter</title>
+<title>What is a mathematician?</title>
 <meta name="Keywords" content="Authored in PreTeXt">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:type" content="book">
@@ -106,7 +106,7 @@ window.MathJax = {
 <ol id="searchresults" class="searchresults"></ol>
 </div>
 </div>
-<span class="nav-other-controls"></span><span class="treebuttons"><a class="previous-button button" href="ch-laplace-transform.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="up-button button" href="series-and-transforms.html" title="Up"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Up</span></a><a class="next-button button" href="backmatter-2.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a></span></nav><div id="latex-macros" class="hidden-content process-math" style="display:none"><span class="process-math">\(\usepackage{times}
+<span class="nav-other-controls"></span><span class="treebuttons"><a class="previous-button button" href="sec-formalism-and-proof.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="up-button button" href="ch-introduction.html" title="Up"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Up</span></a><a class="next-button button" href="sec-overview-of-series-and-transforms.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a></span></nav><div id="latex-macros" class="hidden-content process-math" style="display:none"><span class="process-math">\(\usepackage{times}
 \usepackage[T1]{fontenc}
 \usepackage{parskip}
 \newcommand{\lt}{&lt;}
@@ -118,14 +118,14 @@ window.MathJax = {
 <div class="ptx-page">
 <div id="ptx-sidebar" class="ptx-sidebar"><nav id="ptx-toc" class="ptx-toc depth2"><ul class="structural contains-active toc-item-list">
 <li class="toc-item toc-frontmatter"><div class="toc-title-box"><a href="frontmatter.html" class="internal"><span class="title">Front Matter</span></a></div></li>
-<li class="toc-item toc-chapter">
+<li class="toc-item toc-chapter contains-active">
 <div class="toc-title-box"><a href="ch-introduction.html" class="internal"><span class="codenumber">1</span> <span class="title">Introduction</span></a></div>
-<ul class="structural toc-item-list">
+<ul class="structural toc-item-list contains-active">
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-what-is-mathematics.html" class="internal"><span class="codenumber">1.1</span> <span class="title">What is mathematics?</span></a></div></li>
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-why-study-mathematics.html" class="internal"><span class="codenumber">1.2</span> <span class="title">Why study mathematics?</span></a></div></li>
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-the-power-of-abstraction.html" class="internal"><span class="codenumber">1.3</span> <span class="title">The power of abstraction</span></a></div></li>
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-formalism-and-proof.html" class="internal"><span class="codenumber">1.4</span> <span class="title">Formalism and proof</span></a></div></li>
-<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-what-is-a-mathematician.html" class="internal"><span class="codenumber">1.5</span> <span class="title">What is a mathematician?</span></a></div></li>
+<li class="toc-item toc-section active"><div class="toc-title-box"><a href="sec-what-is-a-mathematician.html" class="internal"><span class="codenumber">1.5</span> <span class="title">What is a mathematician?</span></a></div></li>
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-overview-of-series-and-transforms.html" class="internal"><span class="codenumber">1.6</span> <span class="title">Overview of Series and Transforms</span></a></div></li>
 </ul>
 </li>
@@ -141,11 +141,14 @@ window.MathJax = {
 <li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-fourier-series.html" class="internal"><span class="codenumber">11</span> <span class="title">Fourier series</span></a></div></li>
 <li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-fourier-transform.html" class="internal"><span class="codenumber">12</span> <span class="title">Fourier transform</span></a></div></li>
 <li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-laplace-transform.html" class="internal"><span class="codenumber">13</span> <span class="title">Laplace transform</span></a></div></li>
-<li class="toc-item toc-backmatter active"><div class="toc-title-box"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
+<li class="toc-item toc-backmatter"><div class="toc-title-box"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
 </ul></nav></div>
-<main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="backmatter" id="backmatter"><nav class="summary-links"><ul><li><a href="backmatter-2.html" class="internal"><span class="title">Colophon</span></a></li></ul></nav></section></div>
+<main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="section" id="sec-what-is-a-mathematician"><h2 class="heading hide-type">
+<span class="type">Section</span><span class="space"> </span><span class="codenumber">1.5</span><span class="space"> </span><span class="title">What is a mathematician?</span>
+</h2>
+<div class="para" id="sec-what-is-a-mathematician-2">Text of section.</div></section></div>
 <div class="ptx-content-footer">
-<a class="previous-button button" href="ch-laplace-transform.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="backmatter-2.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
+<a class="previous-button button" href="sec-formalism-and-proof.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="sec-overview-of-series-and-transforms.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
 </div></main>
 </div>
 <div id="ptx-page-footer" class="ptx-page-footer">
