Latest build deployed.

--- a/ch-fourier-transform.html
+++ b/ch-fourier-transform.html
@@ -106,7 +106,7 @@ window.MathJax = {
 <ol id="searchresults" class="searchresults"></ol>
 </div>
 </div>
-<span class="nav-other-controls"></span><span class="treebuttons"><a class="previous-button button" href="ch-fourier-series.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="up-button button" href="series-and-transforms.html" title="Up"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Up</span></a><a class="next-button button" href="ch-laplace-transform.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a></span></nav><div id="latex-macros" class="hidden-content process-math" style="display:none"><span class="process-math">\(\usepackage{times}
+<span class="nav-other-controls"></span><span class="treebuttons"><a class="previous-button button" href="fourier-series-example.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="up-button button" href="series-and-transforms.html" title="Up"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Up</span></a><a class="next-button button" href="ch-laplace-transform.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a></span></nav><div id="latex-macros" class="hidden-content process-math" style="display:none"><span class="process-math">\(\usepackage{times}
 \usepackage[T1]{fontenc}
 \usepackage{parskip}
 \newcommand{\lt}{&lt;}
@@ -138,7 +138,10 @@ window.MathJax = {
 <li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-series-of-functions.html" class="internal"><span class="codenumber">8</span> <span class="title">Series of functions</span></a></div></li>
 <li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-integration.html" class="internal"><span class="codenumber">9</span> <span class="title">Integration</span></a></div></li>
 <li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-vector-spaces.html" class="internal"><span class="codenumber">10</span> <span class="title">Vector spaces</span></a></div></li>
-<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-fourier-series.html" class="internal"><span class="codenumber">11</span> <span class="title">Fourier series</span></a></div></li>
+<li class="toc-item toc-chapter">
+<div class="toc-title-box"><a href="ch-fourier-series.html" class="internal"><span class="codenumber">11</span> <span class="title">Fourier series</span></a></div>
+<ul class="structural toc-item-list"><li class="toc-item toc-section"><div class="toc-title-box"><a href="fourier-series-example.html" class="internal"><span class="codenumber">11.1</span> <span class="title">Fourier series example</span></a></div></li></ul>
+</li>
 <li class="toc-item toc-chapter active"><div class="toc-title-box"><a href="ch-fourier-transform.html" class="internal"><span class="codenumber">12</span> <span class="title">Fourier transform</span></a></div></li>
 <li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-laplace-transform.html" class="internal"><span class="codenumber">13</span> <span class="title">Laplace transform</span></a></div></li>
 <li class="toc-item toc-backmatter"><div class="toc-title-box"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
@@ -147,7 +150,7 @@ window.MathJax = {
 <span class="type">Chapter</span><span class="space"> </span><span class="codenumber">12</span><span class="space"> </span><span class="title">Fourier transform</span>
 </h2></section></div>
 <div class="ptx-content-footer">
-<a class="previous-button button" href="ch-fourier-series.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="ch-laplace-transform.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
+<a class="previous-button button" href="fourier-series-example.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="ch-laplace-transform.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
 </div></main>
 </div>
 <div id="ptx-page-footer" class="ptx-page-footer">
