Latest build deployed.

--- a/ch-introduction.html
+++ b/ch-introduction.html
@@ -129,21 +129,37 @@ window.MathJax = {
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-overview-of-series-and-transforms.html" class="internal"><span class="codenumber">1.6</span> <span class="title">Overview of Series and Transforms</span></a></div></li>
 </ul>
 </li>
-<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-logic-and-mathematical-objects.html" class="internal"><span class="codenumber">2</span> <span class="title">Logic and mathematical objects</span></a></div></li>
-<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-methods-of-proof.html" class="internal"><span class="codenumber">3</span> <span class="title">Methods of proof</span></a></div></li>
-<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-cardinality.html" class="internal"><span class="codenumber">4</span> <span class="title">Cardinality</span></a></div></li>
-<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-sequences.html" class="internal"><span class="codenumber">5</span> <span class="title">Sequences</span></a></div></li>
-<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-sequences-of-functions.html" class="internal"><span class="codenumber">6</span> <span class="title">Sequences of functions</span></a></div></li>
-<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-series.html" class="internal"><span class="codenumber">7</span> <span class="title">Series</span></a></div></li>
-<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-series-of-functions.html" class="internal"><span class="codenumber">8</span> <span class="title">Series of functions</span></a></div></li>
-<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-integration.html" class="internal"><span class="codenumber">9</span> <span class="title">Integration</span></a></div></li>
-<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-vector-spaces.html" class="internal"><span class="codenumber">10</span> <span class="title">Vector spaces</span></a></div></li>
 <li class="toc-item toc-chapter">
-<div class="toc-title-box"><a href="ch-fourier-series.html" class="internal"><span class="codenumber">11</span> <span class="title">Fourier series</span></a></div>
-<ul class="structural toc-item-list"><li class="toc-item toc-section"><div class="toc-title-box"><a href="fourier-series-example.html" class="internal"><span class="codenumber">11.1</span> <span class="title">Fourier series example</span></a></div></li></ul>
+<div class="toc-title-box"><a href="ch-foundations.html" class="internal"><span class="codenumber">2</span> <span class="title">Foundations</span></a></div>
+<ul class="structural toc-item-list">
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-logic.html" class="internal"><span class="codenumber">2.1</span> <span class="title">Logic</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-sets.html" class="internal"><span class="codenumber">2.2</span> <span class="title">Sets</span></a></div></li>
+</ul>
 </li>
-<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-fourier-transform.html" class="internal"><span class="codenumber">12</span> <span class="title">Fourier transform</span></a></div></li>
-<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-laplace-transform.html" class="internal"><span class="codenumber">13</span> <span class="title">Laplace transform</span></a></div></li>
+<li class="toc-item toc-chapter">
+<div class="toc-title-box"><a href="ch-methods-of-proof.html" class="internal"><span class="codenumber">3</span> <span class="title">Methods of proof</span></a></div>
+<ul class="structural toc-item-list">
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-direct.html" class="internal"><span class="codenumber">3.1</span> <span class="title">Direct</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-induction.html" class="internal"><span class="codenumber">3.2</span> <span class="title">Induction</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-contradiction.html" class="internal"><span class="codenumber">3.3</span> <span class="title">Contradiction</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-exhaustion.html" class="internal"><span class="codenumber">3.4</span> <span class="title">Exhaustion</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-ramsey.html" class="internal"><span class="codenumber">3.5</span> <span class="title">R(3,3) = 6</span></a></div></li>
+</ul>
+</li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-mathematical-objects.html" class="internal"><span class="codenumber">4</span> <span class="title">Mathematical objects</span></a></div></li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-cardinality.html" class="internal"><span class="codenumber">5</span> <span class="title">Cardinality</span></a></div></li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-sequences.html" class="internal"><span class="codenumber">6</span> <span class="title">Sequences</span></a></div></li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-sequences-of-functions.html" class="internal"><span class="codenumber">7</span> <span class="title">Sequences of functions</span></a></div></li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-series.html" class="internal"><span class="codenumber">8</span> <span class="title">Series</span></a></div></li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-series-of-functions.html" class="internal"><span class="codenumber">9</span> <span class="title">Series of functions</span></a></div></li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-integration.html" class="internal"><span class="codenumber">10</span> <span class="title">Integration</span></a></div></li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-vector-spaces.html" class="internal"><span class="codenumber">11</span> <span class="title">Vector spaces</span></a></div></li>
+<li class="toc-item toc-chapter">
+<div class="toc-title-box"><a href="ch-fourier-series.html" class="internal"><span class="codenumber">12</span> <span class="title">Fourier series</span></a></div>
+<ul class="structural toc-item-list"><li class="toc-item toc-section"><div class="toc-title-box"><a href="fourier-series-example.html" class="internal"><span class="codenumber">12.1</span> <span class="title">Fourier series example</span></a></div></li></ul>
+</li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-fourier-transform.html" class="internal"><span class="codenumber">13</span> <span class="title">Fourier transform</span></a></div></li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-laplace-transform.html" class="internal"><span class="codenumber">14</span> <span class="title">Laplace transform</span></a></div></li>
 <li class="toc-item toc-backmatter"><div class="toc-title-box"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
 </ul></nav></div>
 <main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="chapter" id="ch-introduction"><h2 class="heading">
