--- a/interactive-fourier-test-if.html
+++ b/interactive-fourier-test-if.html
@@ -78,6 +78,7 @@ window.MathJax = {
 </head>
 <body class="ptx-content ignore-math" id="changeme"><div style="width:600px; height:600px; display: block; box-sizing: border-box; -moz-box-sizing: border-box; -webkit-box-sizing: border-box;">
 <div id="fourier-test" class="jxgbox" style="width:600px; height:600px; display: block; box-sizing: border-box; -moz-box-sizing: border-box; -webkit-box-sizing: border-box;"></div>
+<div id="fourier-test-slider" class="jxgbox" style="width:600px; height:100px; display: block; box-sizing: border-box; -moz-box-sizing: border-box; -webkit-box-sizing: border-box;"></div>
 <script src="external/code/jsxgraph/fouriertest.js"></script>
 </div></body>
 </html>
