--- a/fourier-series-example.html
+++ b/fourier-series-example.html
@@ -129,39 +129,45 @@ window.MathJax = {
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-overview-of-series-and-transforms.html" class="internal"><span class="codenumber">1.6</span> <span class="title">Overview of Series and Transforms</span></a></div></li>
 </ul>
 </li>
-<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-logic-and-mathematical-objects.html" class="internal"><span class="codenumber">2</span> <span class="title">Logic and mathematical objects</span></a></div></li>
-<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-methods-of-proof.html" class="internal"><span class="codenumber">3</span> <span class="title">Methods of proof</span></a></div></li>
-<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-cardinality.html" class="internal"><span class="codenumber">4</span> <span class="title">Cardinality</span></a></div></li>
-<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-sequences.html" class="internal"><span class="codenumber">5</span> <span class="title">Sequences</span></a></div></li>
-<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-sequences-of-functions.html" class="internal"><span class="codenumber">6</span> <span class="title">Sequences of functions</span></a></div></li>
-<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-series.html" class="internal"><span class="codenumber">7</span> <span class="title">Series</span></a></div></li>
-<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-series-of-functions.html" class="internal"><span class="codenumber">8</span> <span class="title">Series of functions</span></a></div></li>
-<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-integration.html" class="internal"><span class="codenumber">9</span> <span class="title">Integration</span></a></div></li>
-<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-vector-spaces.html" class="internal"><span class="codenumber">10</span> <span class="title">Vector spaces</span></a></div></li>
-<li class="toc-item toc-chapter contains-active">
-<div class="toc-title-box"><a href="ch-fourier-series.html" class="internal"><span class="codenumber">11</span> <span class="title">Fourier series</span></a></div>
-<ul class="structural toc-item-list contains-active"><li class="toc-item toc-section active"><div class="toc-title-box"><a href="fourier-series-example.html" class="internal"><span class="codenumber">11.1</span> <span class="title">Fourier series example</span></a></div></li></ul>
+<li class="toc-item toc-chapter">
+<div class="toc-title-box"><a href="ch-foundations.html" class="internal"><span class="codenumber">2</span> <span class="title">Foundations</span></a></div>
+<ul class="structural toc-item-list">
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-logic.html" class="internal"><span class="codenumber">2.1</span> <span class="title">Logic</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-sets.html" class="internal"><span class="codenumber">2.2</span> <span class="title">Sets</span></a></div></li>
+</ul>
 </li>
-<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-fourier-transform.html" class="internal"><span class="codenumber">12</span> <span class="title">Fourier transform</span></a></div></li>
-<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-laplace-transform.html" class="internal"><span class="codenumber">13</span> <span class="title">Laplace transform</span></a></div></li>
+<li class="toc-item toc-chapter">
+<div class="toc-title-box"><a href="ch-methods-of-proof.html" class="internal"><span class="codenumber">3</span> <span class="title">Methods of proof</span></a></div>
+<ul class="structural toc-item-list">
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-direct.html" class="internal"><span class="codenumber">3.1</span> <span class="title">Direct</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-induction.html" class="internal"><span class="codenumber">3.2</span> <span class="title">Induction</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-contradiction.html" class="internal"><span class="codenumber">3.3</span> <span class="title">Contradiction</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-exhaustion.html" class="internal"><span class="codenumber">3.4</span> <span class="title">Exhaustion</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-ramsey.html" class="internal"><span class="codenumber">3.5</span> <span class="title">R(3,3) = 6</span></a></div></li>
+</ul>
+</li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-mathematical-objects.html" class="internal"><span class="codenumber">4</span> <span class="title">Mathematical objects</span></a></div></li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-cardinality.html" class="internal"><span class="codenumber">5</span> <span class="title">Cardinality</span></a></div></li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-sequences.html" class="internal"><span class="codenumber">6</span> <span class="title">Sequences</span></a></div></li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-sequences-of-functions.html" class="internal"><span class="codenumber">7</span> <span class="title">Sequences of functions</span></a></div></li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-series.html" class="internal"><span class="codenumber">8</span> <span class="title">Series</span></a></div></li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-series-of-functions.html" class="internal"><span class="codenumber">9</span> <span class="title">Series of functions</span></a></div></li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-integration.html" class="internal"><span class="codenumber">10</span> <span class="title">Integration</span></a></div></li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-vector-spaces.html" class="internal"><span class="codenumber">11</span> <span class="title">Vector spaces</span></a></div></li>
+<li class="toc-item toc-chapter contains-active">
+<div class="toc-title-box"><a href="ch-fourier-series.html" class="internal"><span class="codenumber">12</span> <span class="title">Fourier series</span></a></div>
+<ul class="structural toc-item-list contains-active"><li class="toc-item toc-section active"><div class="toc-title-box"><a href="fourier-series-example.html" class="internal"><span class="codenumber">12.1</span> <span class="title">Fourier series example</span></a></div></li></ul>
+</li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-fourier-transform.html" class="internal"><span class="codenumber">13</span> <span class="title">Fourier transform</span></a></div></li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-laplace-transform.html" class="internal"><span class="codenumber">14</span> <span class="title">Laplace transform</span></a></div></li>
 <li class="toc-item toc-backmatter"><div class="toc-title-box"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
 </ul></nav></div>
 <main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="section" id="fourier-series-example"><h2 class="heading hide-type">
-<span class="type">Section</span><span class="space"> </span><span class="codenumber">11.1</span><span class="space"> </span><span class="title">Fourier series example</span>
+<span class="type">Section</span><span class="space"> </span><span class="codenumber">12.1</span><span class="space"> </span><span class="title">Fourier series example</span>
 </h2>
 <div class="para" id="fourier-series-example-2">Below is the plot of a Fourier series. Use the slider to change the number of terms included in the series:</div>
 <div class="image-box" style="width: 50%; margin-left: 25%; margin-right: 25%;"><img src="generated/latex-image/fourier-series-example-3.svg" role="img" class="contained"></div>
-<iframe id="interactive-fourier-test" width="600" height="600" src="interactive-fourier-test-if.html"></iframe><div class="instructions"><details id="interactive-fourier-test-2" class="solution-like born-hidden-knowl"><summary class="knowl__link"><h3 class="heading"><span class="type">Instructions<span class="period">.</span></span></h3></summary><div class="solution-like knowl__content"><div class="para" id="interactive-fourier-test-2-1">Adjust the slider</div></div></details></div>
-<figure class="figure figure-like" id="fourier-series-example-5"><iframe id="interactive-d3-collision" width="480" height="480" src="interactive-d3-collision-if.html"></iframe><div class="instructions"><details id="interactive-d3-collision-2" class="solution-like born-hidden-knowl"><summary class="knowl__link"><h3 class="heading"><span class="type">Instructions<span class="period">.</span></span></h3></summary><div class="solution-like knowl__content"><div class="para" id="interactive-d3-collision-2-1">Place your mouse/pointer at the center of the interactive to repel the 200 circles.</div></div></details></div>
-<figcaption><span class="type">Figure</span><span class="space"> </span><span class="codenumber">11.1.1<span class="period">.</span></span><span class="space"> </span>Force layout and collision detection</figcaption></figure><figure class="figure figure-like" id="figure-animation"><iframe id="interactive-animation" width="600" height="500" src="interactive-animation-if.html"></iframe><div class="instructions"><details id="interactive-animation-2" class="solution-like born-hidden-knowl"><summary class="knowl__link"><h3 class="heading"><span class="type">Instructions<span class="period">.</span></span></h3></summary><div class="solution-like knowl__content"><div class="para logical" id="interactive-animation-2-1">
-<div class="para">Parameters <span class="process-math">\(a\text{,}\)</span> <span class="process-math">\(b\text{,}\)</span> <span class="process-math">\(d\text{,}\)</span> and <span class="process-math">\(e\text{,}\)</span> form a <span class="process-math">\(2\times 2\)</span> matrix <span class="process-math">\(A\text{,}\)</span> while <span class="process-math">\(c\)</span> and <span class="process-math">\(f\)</span> form a vector <span class="process-math">\(\vec{b}\text{.}\)</span>  The two views of Woody shows the effect of the mapping</div>
-<div class="displaymath process-math">
-\begin{equation*}
-\vec{x}\mapsto A\vec{x} + \vec{b}\text{.}
-\end{equation*}
-</div>
-</div></div></details></div>
-<figcaption><span class="type">Figure</span><span class="space"> </span><span class="codenumber">11.1.2<span class="period">.</span></span><span class="space"> </span>Affine Transformations</figcaption></figure></section></div>
+<iframe id="interactive-fourier-test" width="600" height="600" src="interactive-fourier-test-if.html"></iframe><div class="instructions"><details id="interactive-fourier-test-3" class="solution-like born-hidden-knowl"><summary class="knowl__link"><h3 class="heading"><span class="type">Instructions<span class="period">.</span></span></h3></summary><div class="solution-like knowl__content"><div class="para" id="interactive-fourier-test-3-1">Adjust the slider</div></div></details></div></section></div>
 <div class="ptx-content-footer">
 <a class="previous-button button" href="ch-fourier-series.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="ch-fourier-transform.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
 </div></main>
