--- a/sec-logic.html
+++ b/sec-logic.html
@@ -8,7 +8,7 @@
 <html lang="en-US" dir="ltr">
 <head xmlns:og="http://ogp.me/ns#" xmlns:book="https://ogp.me/ns/book#">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Sequences of functions</title>
+<title>Logic</title>
 <meta name="Keywords" content="Authored in PreTeXt">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:type" content="book">
@@ -106,7 +106,7 @@ window.MathJax = {
 <ol id="searchresults" class="searchresults"></ol>
 </div>
 </div>
-<span class="nav-other-controls"></span><span class="treebuttons"><a class="previous-button button" href="ch-sequences.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="up-button button" href="series-and-transforms.html" title="Up"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Up</span></a><a class="next-button button" href="ch-series.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a></span></nav><div id="latex-macros" class="hidden-content process-math" style="display:none"><span class="process-math">\(\usepackage{times}
+<span class="nav-other-controls"></span><span class="treebuttons"><a class="previous-button button" href="ch-foundations.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="up-button button" href="ch-foundations.html" title="Up"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Up</span></a><a class="next-button button" href="sec-sets.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a></span></nav><div id="latex-macros" class="hidden-content process-math" style="display:none"><span class="process-math">\(\usepackage{times}
 \usepackage[T1]{fontenc}
 \usepackage{parskip}
 \newcommand{\lt}{&lt;}
@@ -129,10 +129,10 @@ window.MathJax = {
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-overview-of-series-and-transforms.html" class="internal"><span class="codenumber">1.6</span> <span class="title">Overview of Series and Transforms</span></a></div></li>
 </ul>
 </li>
-<li class="toc-item toc-chapter">
+<li class="toc-item toc-chapter contains-active">
 <div class="toc-title-box"><a href="ch-foundations.html" class="internal"><span class="codenumber">2</span> <span class="title">Foundations</span></a></div>
-<ul class="structural toc-item-list">
-<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-logic.html" class="internal"><span class="codenumber">2.1</span> <span class="title">Logic</span></a></div></li>
+<ul class="structural toc-item-list contains-active">
+<li class="toc-item toc-section active"><div class="toc-title-box"><a href="sec-logic.html" class="internal"><span class="codenumber">2.1</span> <span class="title">Logic</span></a></div></li>
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-sets.html" class="internal"><span class="codenumber">2.2</span> <span class="title">Sets</span></a></div></li>
 </ul>
 </li>
@@ -149,7 +149,7 @@ window.MathJax = {
 <li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-mathematical-objects.html" class="internal"><span class="codenumber">4</span> <span class="title">Mathematical objects</span></a></div></li>
 <li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-cardinality.html" class="internal"><span class="codenumber">5</span> <span class="title">Cardinality</span></a></div></li>
 <li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-sequences.html" class="internal"><span class="codenumber">6</span> <span class="title">Sequences</span></a></div></li>
-<li class="toc-item toc-chapter active"><div class="toc-title-box"><a href="ch-sequences-of-functions.html" class="internal"><span class="codenumber">7</span> <span class="title">Sequences of functions</span></a></div></li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-sequences-of-functions.html" class="internal"><span class="codenumber">7</span> <span class="title">Sequences of functions</span></a></div></li>
 <li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-series.html" class="internal"><span class="codenumber">8</span> <span class="title">Series</span></a></div></li>
 <li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-series-of-functions.html" class="internal"><span class="codenumber">9</span> <span class="title">Series of functions</span></a></div></li>
 <li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-integration.html" class="internal"><span class="codenumber">10</span> <span class="title">Integration</span></a></div></li>
@@ -162,11 +162,11 @@ window.MathJax = {
 <li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-laplace-transform.html" class="internal"><span class="codenumber">14</span> <span class="title">Laplace transform</span></a></div></li>
 <li class="toc-item toc-backmatter"><div class="toc-title-box"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
 </ul></nav></div>
-<main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="chapter" id="ch-sequences-of-functions"><h2 class="heading">
-<span class="type">Chapter</span><span class="space"> </span><span class="codenumber">7</span><span class="space"> </span><span class="title">Sequences of functions</span>
+<main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="section" id="sec-logic"><h2 class="heading hide-type">
+<span class="type">Section</span><span class="space"> </span><span class="codenumber">2.1</span><span class="space"> </span><span class="title">Logic</span>
 </h2></section></div>
 <div class="ptx-content-footer">
-<a class="previous-button button" href="ch-sequences.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="ch-series.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
+<a class="previous-button button" href="ch-foundations.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="sec-sets.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
 </div></main>
 </div>
 <div id="ptx-page-footer" class="ptx-page-footer">
