Latest build deployed.

--- a/sec-induction.html
+++ b/sec-induction.html
@@ -143,7 +143,8 @@ window.MathJax = {
 <li class="toc-item toc-section active"><div class="toc-title-box"><a href="sec-induction.html" class="internal"><span class="codenumber">3.2</span> <span class="title">Induction</span></a></div></li>
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-contradiction.html" class="internal"><span class="codenumber">3.3</span> <span class="title">Contradiction</span></a></div></li>
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-exhaustion.html" class="internal"><span class="codenumber">3.4</span> <span class="title">Exhaustion</span></a></div></li>
-<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-ramsey.html" class="internal"><span class="codenumber">3.5</span> <span class="title">Example: R(3,3) = 6</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-pigeonhole.html" class="internal"><span class="codenumber">3.5</span> <span class="title">Example: pirgeonhole principle</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-ramsey.html" class="internal"><span class="codenumber">3.6</span> <span class="title">Example: R(3,3) = 6</span></a></div></li>
 </ul>
 </li>
 <li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-mathematical-objects.html" class="internal"><span class="codenumber">4</span> <span class="title">Mathematical objects</span></a></div></li>
