--- a/ch-methods-of-proof.html
+++ b/ch-methods-of-proof.html
@@ -143,7 +143,8 @@ window.MathJax = {
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-induction.html" class="internal"><span class="codenumber">3.2</span> <span class="title">Induction</span></a></div></li>
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-contradiction.html" class="internal"><span class="codenumber">3.3</span> <span class="title">Contradiction</span></a></div></li>
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-exhaustion.html" class="internal"><span class="codenumber">3.4</span> <span class="title">Exhaustion</span></a></div></li>
-<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-ramsey.html" class="internal"><span class="codenumber">3.5</span> <span class="title">Example: R(3,3) = 6</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-pigeonhole.html" class="internal"><span class="codenumber">3.5</span> <span class="title">Example: pirgeonhole principle</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-ramsey.html" class="internal"><span class="codenumber">3.6</span> <span class="title">Example: R(3,3) = 6</span></a></div></li>
 </ul>
 </li>
 <li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-mathematical-objects.html" class="internal"><span class="codenumber">4</span> <span class="title">Mathematical objects</span></a></div></li>
@@ -170,7 +171,8 @@ window.MathJax = {
 <li><a href="sec-induction.html" class="internal"><span class="codenumber">3.2</span> <span class="title">Induction</span></a></li>
 <li><a href="sec-contradiction.html" class="internal"><span class="codenumber">3.3</span> <span class="title">Contradiction</span></a></li>
 <li><a href="sec-exhaustion.html" class="internal"><span class="codenumber">3.4</span> <span class="title">Exhaustion</span></a></li>
-<li><a href="sec-ramsey.html" class="internal"><span class="codenumber">3.5</span> <span class="title">Example: R(3,3) = 6</span></a></li>
+<li><a href="sec-pigeonhole.html" class="internal"><span class="codenumber">3.5</span> <span class="title">Example: pirgeonhole principle</span></a></li>
+<li><a href="sec-ramsey.html" class="internal"><span class="codenumber">3.6</span> <span class="title">Example: R(3,3) = 6</span></a></li>
 </ul></nav></section></div>
 <div class="ptx-content-footer">
 <a class="previous-button button" href="sec-sets.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="sec-direct.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
