Latest build deployed.

--- a/interactive-fourier-test2-if.html
+++ b/interactive-fourier-test2-if.html
@@ -77,7 +77,8 @@ window.MathJax = {
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsxgraph/0.99.6/jsxgraphcore.js"></script>
 </head>
 <body class="ptx-content ignore-math" id="changeme"><div style="width:600px; height:600px; display: block; box-sizing: border-box; -moz-box-sizing: border-box; -webkit-box-sizing: border-box;">
-<div id="fourier-test" class="jxgbox" style="width:600px; height:600px; display: block; box-sizing: border-box; -moz-box-sizing: border-box; -webkit-box-sizing: border-box;"></div>
-<script src="external/code/jsxgraph/fouriertest.js"></script>
+<div id="fourier-test2" class="jxgbox" style="width:510px; height:510px; display: block; box-sizing: border-box; -moz-box-sizing: border-box; -webkit-box-sizing: border-box;"></div>
+<div id="fourier-test2-slider" class="jxgbox" style="width:510px; height:64px; display: block; box-sizing: border-box; -moz-box-sizing: border-box; -webkit-box-sizing: border-box;"></div>
+<script src="external/code/jsxgraph/fouriertest2.js"></script>
 </div></body>
 </html>
